test/libsolidity/syntaxTests/comments/singleline_unicode_direction_override_2.sol
contract C {
    function f() public pure
    {
        // pop 2
        // underflow ‬‬
    }
}
// ----
// ParserError 8936: (73-89): Unicode direction override underflow in comment.
